--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pandas = "^2.2.3"
 matplotlib = "^3.10.0"
 seaborn = "^0.13.2"
 scikit-learn = "^1.6.1"
+tensorflow = "^2.18.0"
+tf-keras = "^2.18.0"
 
 
 [build-system]
